<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_16dp">
    <TextView
        android:textColor="@color/colorPrimary"
        android:textSize="22dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newnote"/>

    <EditText
        android:id="@+id/edt-title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/title"
        android:inputType="text"
        android:padding="@dimen/padding_8dp" />

    <EditText
        android:id="@+id/edt-content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="top"
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:lines="6"
        android:padding="@dimen/padding_8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnadd"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/btn_add"
            android:textColor="@color/colorPrimary"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/btncancel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/btn_cancel"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

    </LinearLayout>

</LinearLayout>